--- a/project-service/src/main/resources/bootstrap.yml
+++ b/project-service/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/spring_cloud_common?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/dida_manager?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: root
 
@@ -55,6 +55,13 @@ spring:
 # mybatis 配置
 mybatis-plus:
     mapper-locations: classpath*:mapper/*.xml
+    global-config:
+      db-config:
+        #配置逻辑删除
+        logic-delete-field: deleted
+        logic-delete-value: 1
+        logic-not-delete-value: 0
+
 
 #-----------------Hystrix配置-----------------------
 hystrix:
