--- a/config-center/pom.xml
+++ b/config-center/pom.xml
@@ -40,4 +40,17 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- 不执行单元test -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip> true </skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
