新建通知模块 notification-service，新增获取百度小程序的openid和sessionkey接口

--- a/apis-common/pom.xml
+++ b/apis-common/pom.xml
@@ -15,6 +15,12 @@
 
     <!--  导入一些比较通用的即可  -->
     <dependencies>
+        <!-- 解密工具 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
         <!-- Druid 数据源 -->
         <dependency>
             <groupId>com.alibaba</groupId>
