--- a/notification-service/src/main/resources/bootstrap.yml
+++ b/notification-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 #配置端口
 server:
-  port: 10030
+  port: 10050
   servlet:
     context-path: /
     encoding:
@@ -9,13 +9,11 @@ server:
       force: true
       force-request: true
       force-response: true
-
-
 #配置 Spring
 spring:
   application:
-    name: project-service
-  # 数据库配置
+    name: notification-service
+  #数据库配置
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -23,13 +21,12 @@ spring:
     username: root
     password: Hedon954!
 
-  # cloud 相关配置
+  #cloud相关配置
   cloud:
-
     #注册进 Consul
     consul:
-      host: localhost         #先配置在本机
-      port: 8500              #Consul默认端口8500
+      host: localhost        #先配置在本机
+      port: 8500             #Consul 默认端口 8500
       discovery:
         register: true
         instance-id: ${spring.application.name}-1
@@ -37,11 +34,10 @@ spring:
         port: ${server.port}
         prefer-ip-address: true #开启 ip 地址注册(默认是DNS解析）
         ip-address: localhost
+    #开启断路器
     circuitbreaker:
       hystrix:
         enabled: true
-
-
 
 #    #配置config-client
 #    config:
@@ -50,25 +46,25 @@ spring:
 #      profile: dev           #读取后缀名称
 #      #上述3个综合起来 = master分支上的 config-dev.yml 配置文件被读取
 #      uri: http://localhost:10010   #配置中心地址
-#
-#  #rabbitmq
-#  rabbitmq:
-#    host: 172.16.208.150
-#    port: 5672
-#    username: hedon
-#    password: hedon
-#    virtual-host: /hedon
 
-# mybatis 配置
+#rabbitmq
+  rabbitmq:
+#    host: localhost
+    host: 172.16.208.156
+    port: 5672
+    username: hedon
+    password: hedon
+    virtual-host: /hedon
+
+#mybatis 配置
 mybatis-plus:
-    mapper-locations: classpath*:mapper/*.xml
-    global-config:
-      db-config:
-        #配置逻辑删除
-        logic-delete-field: deleted
-        logic-delete-value: 1
-        logic-not-delete-value: 0
-
+  mapper-locations: classpath*:mapper/*.xml
+  global-config:
+    db-config:
+      #配置逻辑删除
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 
 #-----------------Hystrix配置-----------------------
 hystrix:
@@ -117,9 +113,8 @@ hystrix:
 #日志配置
 logging:
   file:
-    name: ./logs/project-service.log
+    name: ./logs/notification-service.log
     clean-history-on-start: true
-
 
 # 暴露监控端点
 management:
@@ -127,22 +122,3 @@ management:
     web:
       exposure:
         include: "*"
-
-#去获取 signingkey
-security:
-  oauth2:
-    #配置客户端信息
-    client:
-      client-id: planplus
-      client-secret: 123456
-    #配置拿 key 的请求路径
-    resource:
-      jwt:
-        key-uri: http://localhost:9527/oauth/token_key
-
-
-#百度小程序的APP客户端信息
-baidu:
-  planplus:
-    client-id: sbSTA92oLC83h39GG5Awq4QX2cgeg1DN
-    sk: tAHnN4LfcrssMHQGzOXcZSe8hj4zaRsD
