--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>project-service</module>
         <module>auth-center</module>
         <module>gateway-center</module>
+        <module>notification-service</module>
     </modules>
 
     <!-- spring boot -->
