--- a/apis-common/pom.xml
+++ b/apis-common/pom.xml
@@ -15,6 +15,11 @@
 
     <!--  导入一些比较通用的即可  -->
     <dependencies>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
         <!-- 解密工具 -->
         <dependency>
             <groupId>commons-codec</groupId>
