任务模块 ——  2.1.5 根据一句话创建任务，基本实现地址和内容的抽取

--- a/apis-common/pom.xml
+++ b/apis-common/pom.xml
@@ -15,6 +15,12 @@
 
     <!--  导入一些比较通用的即可  -->
     <dependencies>
+        <!--分词工具-->
+        <dependency>
+            <groupId>org.ansj</groupId>
+            <artifactId>ansj_seg</artifactId>
+            <version>5.1.1</version>
+        </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
