--- a/gateway-center/src/main/resources/bootstrap.yml
+++ b/gateway-center/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 #配置端口
 server:
-  port: 9527
+  port: 443
   servlet:
     encoding:
       enabled: true
@@ -8,6 +8,16 @@ server:
       force: true
       force-request: true
       force-response: true
+  #配置HTTPS证书
+  ssl:
+    key-store: classpath:hedon-wang-tomcat-1127211857.jks   #证书名称
+    key-store-password: planplus                            #密钥库密码
+    key-store-type: JKS                                     #证书类型
+  #请求头大小
+  tomcat:
+    max-http-form-post-size: 32768
+  max-http-header-size: 32768
+
 
 #配置spring
 spring:
@@ -25,7 +35,7 @@ spring:
   cloud:
     #注册进 Consul
     consul:
-      host: localhost         #先配置在本机
+      host: www.hedon.wang
       port: 8500              #Consul默认端口8500
       discovery:
         register: true
@@ -33,7 +43,8 @@ spring:
         service-name: ${spring.application.name}
         port: ${server.port}
         prefer-ip-address: true #开启 ip 地址注册(默认是DNS解析）
-        ip-address: localhost
+        ip-address: www.hedon.wang
+        scheme: https
     #ockingLoadBalancerClientRibbonWarnLogger : You already have RibbonLoadBalancerClient on your classpath. It will be used by default. As Spring Cloud Ribbon is in maintenance mode. We recommend switching to BlockingLoadBalancerClient instead. In order to use it, set the value of `spring.cloud.loadbalancer.ribbon.enabled` to `false` or remove spring-cloud-starter-netflix-ribbon from your project.
     #eactorLoadBalancerClientRibbonWarnLogger : You have RibbonLoadBalancerClient on your classpath. LoadBalancerExchangeFilterFunction that uses it under the hood will be used by default. Spring Cloud Ribbon is now in maintenance mode, so we suggest switching to ReactorLoadBalancerExchangeFilterFunction instead. In order to use it, set the value of `spring.cloud.loadbalancer.ribbon.enabled` to `false` or remove spring-cloud-starter-netflix-ribbon from your project.
 #    loadbalancer:
@@ -102,4 +113,4 @@ security:
     #配置拿 key 的请求路径
     resource:
       jwt:
-        key-uri: http://localhost:10040/oauth/token_key
+        key-uri: https://www.hedon.wang:10040/oauth/token_key
