--- a/notification-service/src/main/resources/bootstrap.yml
+++ b/notification-service/src/main/resources/bootstrap.yml
@@ -9,6 +9,16 @@ server:
       force: true
       force-request: true
       force-response: true
+  #配置HTTPS证书
+  ssl:
+    key-store: classpath:hedon-wang-tomcat-1127211857.jks   #证书名称
+    key-store-password: planplus                            #密钥库密码
+    key-store-type: JKS                                     #证书类型
+  #请求头大小
+  tomcat:
+    max-http-form-post-size: 32768
+  max-http-header-size: 32768
+
 #配置 Spring
 spring:
   application:
@@ -25,7 +35,7 @@ spring:
   cloud:
     #注册进 Consul
     consul:
-      host: localhost        #先配置在本机
+      host: www.hedon.wang
       port: 8500             #Consul 默认端口 8500
       discovery:
         register: true
@@ -33,7 +43,9 @@ spring:
         service-name: ${spring.application.name}
         port: ${server.port}
         prefer-ip-address: true #开启 ip 地址注册(默认是DNS解析）
-        ip-address: localhost
+        ip-address: www.hedon.wang
+        scheme: https
+
     #开启断路器
     circuitbreaker:
       hystrix:
