--- a/auth-center/src/main/resources/bootstrap.yml
+++ b/auth-center/src/main/resources/bootstrap.yml
@@ -11,15 +11,15 @@ server:
       force-response: true
     session:
       timeout: 259200
-  #配置HTTPS证书
-  ssl:
-    key-store: classpath:hedon-wang-tomcat-1127211857.jks   #证书名称
-    key-store-password: planplus                            #密钥库密码
-    key-store-type: JKS                                     #证书类型
-  #请求头大小
-  tomcat:
-    max-http-form-post-size: 32768
-  max-http-header-size: 32768
+#  #配置HTTPS证书
+#  ssl:
+#    key-store: classpath:hedon-wang-tomcat-1127211857.jks   #证书名称
+#    key-store-password: planplus                            #密钥库密码
+#    key-store-type: JKS                                     #证书类型
+#  #请求头大小
+#  tomcat:
+#    max-http-form-post-size: 32768
+#  max-http-header-size: 32768
 
 
 #配置spring
@@ -38,7 +38,7 @@ spring:
   cloud:
     #注册进 Consul
     consul:
-      host: www.hedon.wang
+      host: localhost
       port: 8500              #Consul默认端口8500
       discovery:
         register: true
@@ -46,8 +46,8 @@ spring:
         service-name: ${spring.application.name}
         port: ${server.port}
         prefer-ip-address: true #开启 ip 地址注册(默认是DNS解析）
-        ip-address: www.hedon.wang
-        scheme: https
+        ip-address: localhost
+#        scheme: https
 
 
 #    #配置config-client
