--- a/project-service/pom.xml
+++ b/project-service/pom.xml
@@ -13,6 +13,12 @@
 
 
     <dependencies>
+        <!-- 榛子云短信验证SDK -->
+        <dependency>
+            <groupId>com.zhenzikj</groupId>
+            <artifactId>zhenzisms</artifactId>
+            <version>2.0.2</version>
+        </dependency>
         <!--邮件支持-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
