--- a/project-service/src/main/resources/bootstrap.yml
+++ b/project-service/src/main/resources/bootstrap.yml
@@ -9,15 +9,15 @@ server:
       force: true
       force-request: true
       force-response: true
-  #配置HTTPS证书
-  ssl:
-    key-store: classpath:hedon-wang-tomcat-1127211857.jks   #证书名称
-    key-store-password: planplus                            #密钥库密码
-    key-store-type: JKS                                     #证书类型
-  #请求头大小
-  tomcat:
-    max-http-form-post-size: 32768
-  max-http-header-size: 32768
+#  #配置HTTPS证书
+#  ssl:
+#    key-store: classpath:hedon-wang-tomcat-1127211857.jks   #证书名称
+#    key-store-password: planplus                            #密钥库密码
+#    key-store-type: JKS                                     #证书类型
+#  #请求头大小
+#  tomcat:
+#    max-http-form-post-size: 32768
+#  max-http-header-size: 32768
 
 
 
@@ -37,7 +37,7 @@ spring:
   cloud:
     #注册进 Consul
     consul:
-      host: www.hedon.wang
+      host: localhost
       port: 8500              #Consul默认端口8500
       discovery:
         register: true
@@ -45,8 +45,8 @@ spring:
         service-name: ${spring.application.name}
         port: ${server.port}
         prefer-ip-address: true #开启 ip 地址注册(默认是DNS解析）
-        ip-address: www.hedon.wang
-        scheme: https
+        ip-address: localhost
+#        scheme: https
 
     circuitbreaker:
       hystrix:
@@ -173,7 +173,7 @@ security:
     #配置拿 key 的请求路径
     resource:
       jwt:
-        key-uri: https://www.hedon.wang:443/oauth/token_key
+        key-uri: http://localhost:10040/oauth/token_key
 
 
 #百度小程序的APP客户端信息
