--- a/mail-service/src/main/resources/bootstrap.yml
+++ b/mail-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 #配置端口
 server:
-  port: 10030
+  port: 10060
   servlet:
     context-path: /
     encoding:
@@ -10,13 +10,11 @@ server:
       force-request: true
       force-response: true
 
-
-
 #配置 Spring
 spring:
   application:
-    name: project-service
-  # 数据库配置
+    name: mail-service
+  #数据库配置
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,12 +22,12 @@ spring:
     username: root
     password: Hedon954!
 
-  # cloud 相关配置
+  #cloud相关配置
   cloud:
     #注册进 Consul
     consul:
       host: localhost
-      port: 8500              #Consul默认端口8500
+      port: 8500             #Consul 默认端口 8500
       discovery:
         register: true
         instance-id: ${spring.application.name}-1
@@ -38,44 +36,53 @@ spring:
         prefer-ip-address: true #开启 ip 地址注册(默认是DNS解析）
         ip-address: localhost
 
+    #开启断路器
     circuitbreaker:
       hystrix:
         enabled: true
 
-  mvc:
-    static-path-pattern: /project/img/**
+  #配置邮箱
 
-  spring:
-    resources:
-      static-locations: file:C:/planplus/avatar/
+  mail:
+    host: smtp.qq.com                     #邮箱服务商
+    #邮箱地址
+    username: 171725713@qq.com
+    #不是密码，是授权码，需要获取
+    password: jsylfpctjhnubhdc
+    from: 171725713@qq.com
+    to: 171725713@qq.com
+    properties:
+      mail:
+        stmp:
+          socketFactory:
+            class: javax.net.ssl.SSLSocketFactory
+          #设置是否需要认证，如果为true,那么用户名和密码就必须的
+          #如果设置false，可以不设置用户名和密码，当然也得看你的对接的平台是否支持无密码进行访问的。
+          auth: true
+          ##TARTTLS[1]  是对纯文本通信协议的扩展。它提供一种方式将纯文本连接升级为加密连接（TLS或SSL），而不是另外使用一个端口作加密通信
+          starttls:
+            enable: true                 #服务器启动 tls 验证
+#            required: true               #服务器需要 tls 验证
+    default-encoding: utf-8
 
-
-#配置config-client
+#    #配置config-client
 #    config:
 #      label: master          #分支名称
 #      name: config           #配置文件名称
 #      profile: dev           #读取后缀名称
 #      #上述3个综合起来 = master分支上的 config-dev.yml 配置文件被读取
 #      uri: http://localhost:10010   #配置中心地址
-#
-#  #rabbitmq
-#  rabbitmq:
-#    host: 172.16.208.150
-#    port: 5672
-#    username: hedon
-#    password: hedon
-#    virtual-host: /hedon
 
-# mybatis 配置
+
+#mybatis 配置
 mybatis-plus:
-    mapper-locations: classpath*:mapper/*.xml
-    global-config:
-      db-config:
-        #配置逻辑删除
-        logic-delete-field: deleted
-        logic-delete-value: 1
-        logic-not-delete-value: 0
-
+  mapper-locations: classpath*:mapper/*.xml
+  global-config:
+    db-config:
+      #配置逻辑删除
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 
 #-----------------Hystrix配置-----------------------
 hystrix:
@@ -124,9 +131,8 @@ hystrix:
 #日志配置
 logging:
   file:
-    name: ./logs/project-service.log
+    name: ./logs/mail-service.log
     clean-history-on-start: true
-
 
 # 暴露监控端点
 management:
@@ -140,20 +146,9 @@ security:
   oauth2:
     #配置客户端信息
     client:
-      client-id: planplus
+      client-id: mail-service
       client-secret: 123456
     #配置拿 key 的请求路径
     resource:
       jwt:
         key-uri: http://localhost:10040/oauth/token_key
-
-
-#百度小程序的APP客户端信息
-baidu:
-  planplus:
-    client-id: sbSTA92oLC83h39GG5Awq4QX2cgeg1DN
-    sk: tAHnN4LfcrssMHQGzOXcZSe8hj4zaRsD
-
-
-
-
