实现百度登陆

--- a/project-service/src/main/resources/bootstrap.yml
+++ b/project-service/src/main/resources/bootstrap.yml
@@ -153,6 +153,7 @@ baidu:
   planplus:
     client-id: sbSTA92oLC83h39GG5Awq4QX2cgeg1DN
     sk: tAHnN4LfcrssMHQGzOXcZSe8hj4zaRsD
+    app-id: 22868233
 
 
 
